src/main/java/com/example/backend/error/OldPasswordMissmatchException.java
package com.example.backend.error;

public class OldPasswordMissmatchException extends RuntimeException {
    public OldPasswordMissmatchException(String message) {
        super(message);
    }
}
